tests/snapshots/golden_snapshot_tests__golden_run_metadata.snap
---
source: tests/golden_snapshot_tests.rs
expression: m
---
{
  "run_id": "00000000-0000-0000-0000-000000000002",
  "work_order_id": "00000000-0000-0000-0000-000000000001",
  "contract_version": "abp/v0.1",
  "started_at": "2025-01-15T12:00:00Z",
  "finished_at": "2025-01-15T12:05:00Z",
  "duration_ms": 300000
}
