tests/snapshots/golden_snapshot_tests__golden_runtime_config_default.snap
---
source: tests/golden_snapshot_tests.rs
expression: c
---
{
  "model": null,
  "vendor": {},
  "env": {},
  "max_budget_usd": null,
  "max_turns": null
}
