tests/snapshots/golden_snapshot_tests__golden_runtime_config_model_only.snap
---
source: tests/golden_snapshot_tests.rs
expression: c
---
{
  "model": "gpt-4",
  "vendor": {},
  "env": {},
  "max_budget_usd": null,
  "max_turns": null
}
