tests/snapshots/golden_snapshot_tests__golden_schema_runtime_config.snap
---
source: tests/golden_snapshot_tests.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "RuntimeConfig",
  "description": "Runtime-level knobs: model selection, vendor flags, budget caps, etc.",
  "type": "object",
  "properties": {
    "env": {
      "description": "Environment variables for the runtime.",
      "type": "object",
      "additionalProperties": {
        "type": "string"
      }
    },
    "max_budget_usd": {
      "description": "Hard cap on cost (best-effort).",
      "type": [
        "number",
        "null"
      ],
      "format": "double"
    },
    "max_turns": {
      "description": "Hard cap on turns/iterations (best-effort).",
      "type": [
        "integer",
        "null"
      ],
      "format": "uint32",
      "minimum": 0
    },
    "model": {
      "description": "Preferred backend/model identifier.",
      "type": [
        "string",
        "null"
      ]
    },
    "vendor": {
      "description": "Optional vendor-specific flags (passed through adapters).",
      "type": "object",
      "additionalProperties": true
    }
  },
  "required": [
    "vendor",
    "env"
  ]
}
